# advent2020

day1/: README.md  advent2020.cabal
day1/app/: Main.hs
day1/src/: Lib.hs
day1/test/: Spec.hs
day2/: LICENSE  advent2020.cabal  stack.yaml
day2/src/: Lib.hs
day2/src/Lib/: Prelude.hs
day2/test/: Spec.hs
